# fin-opt

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  README.md  docker-compose.yml  environment.yml  final_test_check.txt  index.html  llm_waste_reward_complete_implementation.txt  llm_waste_reward_math_explanation.txt  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  run-local.sh  run_api_tests.py  sitemap.xml  test_withdrawal_simple.py
.github/workflows/: deploy-docs.yml  test.yml
.virtual_documents/notebooks/: 01-profile-builder.ipynb  02-scenario-optimizer.ipynb  FinOpt-Workflow.ipynb  fin-opt_workflow.ipynb  recursive_affine_verification.ipynb  simulation.ipynb
ROADMAP/: index.html
api/: __init__.py  config.py  main.py  supabase_client.py
api/services/: __init__.py  _goal_metrics.py  optimization.py  reconstruction.py  simulation.py
benchmarks/: bench_horizon_search.py
cli/: index.html
config/: index.html
deployment/improvement-plan/: index.html
deployment/mvp-go-live-checklist/: index.html
deployment/next-step-supabase-setup/: index.html
deployment/web-app-plan/: index.html
docker/: Dockerfile.api
docs/: FINOPT_MATHEMATICAL_FRAMEWORK.md  ROADMAP.md  cli.md  config.md  exceptions.md  framework.md  goals.md  income.md  index.md  investment.md  model.md  optimization.md  phase1-dual-metrics-summary.md  phase2-documentation-summary.md  plotting.md  portfolio.md  quickstart.md  returns.md  scenario.md  serialization.md  simulation.md  utils.md  withdrawal.md
docs/deployment/: improvement-plan.md  mvp-go-live-checklist.md  next-step-supabase-setup.md  web-app-plan.md
docs/overrides/: main.html
docs/study-plan/: README.md  project-file-index.md  validation-report.md
examples/: advanced_config.json  basic_config.json  basic_goals.json  demo_dual_metrics.py  multiple_goals.json
exceptions/: index.html
framework/: index.html
goals/: index.html
income/: index.html
model/: index.html
notebooks/: 01-profile-builder.ipynb  02-scenario-optimizer.ipynb  FinOpt-Extended.ipynb  FinOpt-Workflow.html  FinOpt-Workflow.ipynb  fin-opt_workflow.html  fin-opt_workflow.ipynb  recursive_affine_verification.ipynb  simulation.ipynb
optimization/: index.html
phase1-dual-metrics-summary/: index.html
phase2-documentation-summary/: index.html
plotting/: index.html
portfolio/: index.html
profiles/: example_profile.json  my_profile.json
quickstart/: index.html
returns/: index.html
scenarios/: house_purchase_2026.json
scripts/: generate_demo_seed.py
search/: search_index.json
serialization/: index.html
site/: 404.html  index.html  sitemap.xml
site/framework/: index.html
site/goals/: index.html
site/income/: index.html
site/javascripts/: mathjax.js
site/model/: index.html
site/optimization/: index.html
site/portfolio/: index.html
site/returns/: index.html
site/search/: search_index.json
site/withdrawal/: index.html
src/: __init__.py  config.py  constants.py  exceptions.py  expenses.py  goals.py  income.py  investment.py  model.py  optimization.py  plotting.py  portfolio.py  returns.py  rewards.py  scenario.py  serialization.py  simulation.py  types.py  utils.py  withdrawal.py
src/finopt/: __init__.py  cli.py  config.py  constants.py  finopt_types.py  goals.py  income.py  model.py  optimization.py  plotting.py  portfolio.py  returns.py  serialization.py  utils.py  withdrawal.py
study-plan/: index.html
study-plan/project-file-index/: index.html
study-plan/validation-report/: index.html
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_add_proportional_objective.sql  003_demo_shared_scenario.sql  004_refresh_demo_shared_scenario_usd.sql  005_allow_users_delete_jobs_and_results.sql
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_endpoints.py  test_api_optimization_service.py  test_api_simulation_service.py  test_dual_metrics_e2e.py  test_horizon_search_validation.py  test_workflow.py
tests/unit/: __init__.py  test_api_config.py  test_api_goal_metrics.py  test_api_reconstruction_service.py  test_api_supabase_client.py  test_cli.py  test_config.py  test_error_handling_improvements.py  test_expenses.py  test_goals.py  test_income.py  test_income_extended.py  test_model.py  test_model_extended.py  test_optimization.py  test_optimization_extended.py  test_plotting.py  (+7 more)
utils/: index.html
web/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
withdrawal/: index.html
(+76 files in other folders)
